add SQl but not correct

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 
   {% endfor%}
 
-  <input type="submit" value="Register">
+  <button type="submit">Register <button></button>
 </form>
 
 {% endblock %}
