--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="initial-scale=1, width=device-width">
-  <title>hello</title>
+  <title>froshims</title>
   <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='style.css')}}">
 </head>
 
