--- a/templates/registrants.html
+++ b/templates/registrants.html
@@ -5,15 +5,21 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Sport
-      </th>
+      <th>Sport</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
     {% for name in registrants %}
     <tr>
-      <td>{{name}}</td>
-      <td>{{registrants[name]}}</td>
+      <td>{{registratnt.name}}</td>
+      <td>{{registrant.sport}}</td>
+      <td>
+        <form action="/deregister" method="post">
+          <input type="hidden" name="id" value="{{registrant.id}}">
+          <button type="submmit">Deregister</button>
+        </form>
+      </td>
     </tr>
     {% endfor %}
   </tbody>
