--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 
   {% endfor%}
 
-  <button type="submit">Register <button></button>
+  <button type="submit">Register </button>
 </form>
 
 {% endblock %}
