--- a/templates/registrants.html
+++ b/templates/registrants.html
@@ -10,14 +10,14 @@
     </tr>
   </thead>
   <tbody>
-    {% for name in registrants %}
+    {% for registrant in registrants %}
     <tr>
-      <td>{{registratnt.name}}</td>
+      <td>{{registrant.name}}</td>
       <td>{{registrant.sport}}</td>
       <td>
         <form action="/deregister" method="post">
           <input type="hidden" name="id" value="{{registrant.id}}">
-          <button type="submmit">Deregister</button>
+          <button type="submit">Deregister</button>
         </form>
       </td>
     </tr>
